force-app/main/default/objects/ProductCondition__c/ProductCondition__c.object-meta.xml
<CustomObject>
    <label>Product Condition</label>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Product Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>