force-app/main/default/objects/ProductCondition__c/fields/AccountCondition__c.field-meta.xml
<CustomField>
    <fullName>AccountCondition__c</fullName>
    <label>Account Condition</label>
    <referenceTo>AccountConditions__c</referenceTo>
    <relationshipLabel>Product Conditions</relationshipLabel>
    <relationshipName>Product_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>