force-app/main/default/objects/ProductCondition__c/fields/ApplicableAccount__c.field-meta.xml
<CustomField>
    <fullName>ApplicableAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicable Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Conditions (Applicable Account)</relationshipLabel>
    <relationshipName>Product_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>