force-app/main/default/objects/ProductCondition__c/fields/ChainParentCondition__c.field-meta.xml
<CustomField>
    <fullName>ChainParentCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain Parent Condition</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Conditions</relationshipLabel>
    <relationshipName>ProductConditions</relationshipName>
    <type>Lookup</type>
</CustomField>