force-app/main/default/objects/ProductCondition__c/fields/CoffeeSurcharge__c.field-meta.xml
<CustomField>
    <fullName>CoffeeSurcharge__c</fullName>
    <label>Coffee Surcharge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>