force-app/main/default/objects/ProductCondition__c/fields/ConditionNumber__c.field-meta.xml
<CustomField>
    <fullName>ConditionNumber__c</fullName>
    <label>Condition Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>