force-app/main/default/objects/ProductCondition__c/fields/IndividualCondition__c.field-meta.xml
<CustomField>
    <fullName>IndividualCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Condition</label>
    <type>Checkbox</type>
</CustomField>