force-app/main/default/objects/ProductCondition__c/fields/MachineSurcharge__c.field-meta.xml
<CustomField>
    <fullName>MachineSurcharge__c</fullName>
    <label>Machine Surcharge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>