force-app/main/default/objects/ProductCondition__c/fields/OverallSurcharge__c.field-meta.xml
<CustomField>
    <fullName>OverallSurcharge__c</fullName>
    <label>Overall Surcharge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>