force-app/main/default/objects/ProductCondition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Conditions</relationshipLabel>
    <relationshipName>ProductConditions</relationshipName>
    <type>Lookup</type>
</CustomField>