force-app/main/default/objects/ProductCondition__c/fields/ProductListing__c.field-meta.xml
<CustomField>
    <fullName>ProductListing__c</fullName>
    <label>Product Listing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inherited Listing</fullName>
            </value>
            <value>
                <fullName>Own Listing</fullName>
            </value>
            <value>
                <fullName>Core Product Line</fullName>
            </value>
            <value>
                <fullName>Inherited Listing Block</fullName>
            </value>
            <value>
                <fullName>Own Listing Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>