force-app/main/default/objects/ProductCondition__c/fields/RefundDiscountInEuro__c.field-meta.xml
<CustomField>
    <fullName>RefundDiscountInEuro__c</fullName>
    <label>Refund - Discount (in €)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>