force-app/main/default/objects/ProductCondition__c/fields/RefundDiscountInPercent__c.field-meta.xml
<CustomField>
    <fullName>RefundDiscountInPercent__c</fullName>
    <label>Refund - Discount (in %)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>