force-app/main/default/objects/ProductCondition__c/fields/SpecialDiscountInE__c.field-meta.xml
<CustomField>
    <fullName>SpecialDiscountInE__c</fullName>
    <label>Special Discount (in €)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>