force-app/main/default/objects/ProductCondition__c/fields/SpecialDiscountInPct__c.field-meta.xml
<CustomField>
    <fullName>SpecialDiscountInPct__c</fullName>
    <label>Special Discount (in %)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>