force-app/main/default/objects/ProductCondition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ApplicableAccount__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>